core: Minor optimisation in AbstractCell
Identified by findbugs.

Target: trunk
Patch: http://rb.dcache.org/r/416/
Acked-by: Paul Millar <paul.millar@desy.de>