@@ -532,7 +532,7 @@ public class AbstractCell extends CellAdapter
                     result = type.cast(i);
                 }
             } else if (type == Character.class || type == Character.TYPE) {
-                Character i = new Character(so.charAt(0));
+                Character i = Character.valueOf(so.charAt(0));
                 if (type == Character.TYPE) {
                     result = ((Class<T>) Character.class).cast(i); //avoid ClassCastException through autoboxing
                 } else {
